--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Eloi
+first_name: Ariel
 middle_name: 
-last_name: TANGUY
-email: eloi.tanguy@math.cnrs.fr
+last_name: Offenstadt
+email: ariel.offenstadt@math.cnrs.fr
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Eloi Tanguy's website
 # footer_text: >
@@ -18,7 +18,7 @@ keywords: #jekyll, jekyll-theme, academic-website, portfolio-website  # add your
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.jpg  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://eloitanguy.github.io # the base hostname & protocol for your site
+url: https://arieloffen.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
